# context-engineering-framework

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  coverage.xml  docker-compose.yml  minimal_setup.py  mypy.ini  py.typed  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: api_reference.rst  changelog.rst  conf.py  contributing.rst  getting_started.rst  index.rst  installation.rst  requirements.txt  roadmap.rst  user_guide.rst
examples/: README.md  basic_agent.py  context_management.py  custom_tools.py  multi_agent_system.py  requirements-web.txt  web_integration.py
src/: __init__.py
src/cli/: __init__.py  main.py
src/context_engineering_framework/: __init__.py
src/context_engineering_framework/core/: agent.py  context.py
src/core/: __init__.py  context.py  tools.py
tests/: __init__.py  conftest.py  test_core.py
tests/core/: test_agent.py  test_context.py  test_tools.py
