[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
max-complexity = 18
exclude = .git,__pycache__,.tox,.venv,venv,build,dist
per-file-ignores =
    # Allow 'import *' in __init__.py files
    __init__.py: F403,F401
    # Ignore line break before binary operator (W503)
    *.py: W503

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[coverage:run]
source = src
omit =
    */tests/*
    */__main__.py

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

    # Don't complain about abstract methods
    @(abc\.)?abstractmethod

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=src --cov-report=term-missing
asyncio_mode = auto

[egg_info]
tag_build = 
tag_date = 0
